--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 <body>
 <section id="banner">
-    <img src="images/logo.png" class="logo">
+    <img src="./images/logo.png" class="logo">
     <div class="banner-text">
         <h1>Dog Salon</h1>
         <p>Pamper Your Pooch, Perfectly!</p>
@@ -46,7 +46,7 @@
 </div>
 
 <div id="menuBtn">
-    <img src="/images/menu.png" id="menu">
+    <img src="./images/menu.png" id="menu">
 </div>
 
 <!-- Features -->
@@ -83,7 +83,7 @@
         </div>
         
         <div class="features-img">
-            <img src="/images/barber-man.jpg">
+            <img src="./images/barber-man.jpg">
         </div>
     </div>
 </section>
@@ -97,7 +97,7 @@
     </div>
     <div class="service-box">
         <div class="single-service">
-            <img src="/images/pic-1.jpg">
+            <img src="./images/pic-1.jpg">
             <div class="overlay"></div>
             <div class="service-desc">
                 <h3>Bathing</h3>
@@ -106,7 +106,7 @@
             </div>
         </div>
         <div class="single-service">
-            <img src="/images/pic-2.jpg">
+            <img src="./images/pic-2.jpg">
             <div class="overlay"></div>
             <div class="service-desc">
                 <h3>Haircut/Trimming</h3>
@@ -115,7 +115,7 @@
             </div>
         </div>
         <div class="single-service">
-            <img src="/images/pic-3.jpg">
+            <img src="./images/pic-3.jpg">
             <div class="overlay"></div>
             <div class="service-desc">
                 <h3>Teeth Cleaning</h3>
@@ -145,7 +145,7 @@
     <div class="testimonial-row">
         <div class="testimonial-col">
             <div class="user">
-                <img src="/images/img-1.jpg">
+                <img src="./images/img-1.jpg">
                 <div class="user-info">
                     <h4>Ricardo Bernardino <i class="fa fa-twitter"></i></h4>
                     <small>@ricardobernardino</small>
@@ -155,7 +155,7 @@
         </div>
         <div class="testimonial-col">
             <div class="user">
-                <img src="/images/img-2.jpg">
+                <img src="./images/img-2.jpg">
                 <div class="user-info">
                     <h4>Lourdes Lopez <i class="fa fa-twitter"></i></h4>
                     <small>@lordeslopez</small>
@@ -179,7 +179,7 @@
 <!-- Footer -->
 
 <section id="footer">
-    <img src="/images/footer-img.png" class="footer-img">
+    <img src="./images/footer-img.png" class="footer-img">
     <div class="title-text">
         <p>CONTACT</p>
         <h1>Visit Shop Today</h1>
@@ -218,11 +218,11 @@ sideNav.style.right = "-250px";
 menuBtn.onclick = function() {
     if(sideNav.style.right == "-250px") {
         sideNav.style.right = "0";
-        menu.src = "/images/close.png";
+        menu.src = "./images/close.png";
     }
     else {
         sideNav.style.right = "-250px";
-        menu.src = "/images/menu.png";
+        menu.src = "./images/menu.png";
     }
 }
 
