--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         </div>
         <div class="testimonial-col">
             <div class="user">
-                <img src="/images/img-3.jpg">
+                <img src="./images/img-3.jpg">
                 <div class="user-info">
                     <h4>Antonio Perez <i class="fa fa-twitter"></i></h4>
                     <small>@antonioperez</small>
