--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             </div>
         </div>
         <div class="single-service">
-            <img src="/images/pic-4.jpg">
+            <img src="./images/pic-4.jpg">
             <div class="overlay"></div>
             <div class="service-desc">
                 <h3>Nail Trimming</h3>
