--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
         </div>
         <div class="footer-right">
             <h1>Get In Touch</h1>
-            <p>#30 abc Colony, xyz City PH<i class="fa fa-map-marker"></i></p>
+            <p>Ortigas Center, Philippines<i class="fa fa-map-marker"></i></p>
             <p>example@website.com<i class="fa fa-paper-plane"></i></p>
             <p>+01 234567891<i class="fa fa-phone"></i></p>
         </div>
